@@ -7,6 +7,8 @@ import { WeatherService} from "../providers/weather-service";
 import { Weather } from "../pages/weather/weather";
 import { Locations } from "../pages/locations/locations";
 
+import { CurrentLoc } from "../interfaces/current-loc";
+
 @Component({
   templateUrl: 'app.html'
 })
@@ -15,7 +17,8 @@ export class MyApp {
 
   rootPage: any = Weather;
 
-  pages: Array<{title: string, component: any, icon: string}>;
+  //Adding CurrentLoc as optional
+  pages: Array<{title: string, component: any, icon: string, loc?: CurrentLoc}>;
 
   constructor(public platform: Platform,
               public statusBar: StatusBar,
@@ -27,7 +30,11 @@ export class MyApp {
     // used for an example of ngFor and navigation
     this.pages = [
       { title: 'Edit Locations', component: Locations, icon: 'create'},
-      { title: 'Current Location', component: Weather, icon: 'pin' }
+      { title: 'Current Location', component: Weather, icon: 'pin' },
+      { title: 'Cape Canaveral, FL', component: Weather, icon: 'pin', loc: {lat:25.3922, lon:-80.6077}},
+      { title: 'San Fransisco, CA', component: Weather, icon: 'pin', loc: {lat:37.7749, lon:-122.4194}},
+      { title: 'VanCouver, BC', component: Weather, icon: 'pin', loc: {lat:49.2827, lon:-123.1207}},
+      { title: 'Madison WI', component: Weather, icon: 'pin', loc: {lat:43.0742365, lon:-89.381011899}}
     ];
   }
 
@@ -43,6 +50,9 @@ export class MyApp {
   openPage(page) {
     // Reset the content nav to have just this page
     // we wouldn't want the back button to show in this scenario
-    this.nav.setRoot(page.component);
+    if(page.hasOwnProperty('loc')){
+      this.nav.setRoot(page.component,{geoloc: page.loc, title: page.title});
+    }else {
+      this.nav.setRoot(page.component);
   }
-}
+}}
